# CppOptimizationAlgorithms

./: CMakeLists.txt  main.cpp
include/base/: base_elements.hpp  bracketing.hpp
include/ceres_optimization/introduction/: hello_world_ceres.hpp
